# python-flask/swagger_server/swagger/swagger.yaml
@@ -144,9 +144,7 @@ paths:
         content:
           application/json:
             schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/StockProduct'
+              $ref: '#/components/schemas/StockProduct'
       responses:
         "200":
           description: stock updated
